<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRelative">

    <Button
        android:id="@+id/btn_rel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel1"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/btn_rel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btn_rel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel3"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btn_rel4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel4"/>
    <Button
        android:id="@+id/btn_rel5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel5"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/btn_rel6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel6"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/btn_rel7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel7"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>
    <Button
        android:id="@+id/btn_rel8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel8"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn_rel9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel9"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btn_rel10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel10"
        android:layout_above="@id/btn_rel5"
        android:layout_alignLeft="@id/btn_rel5"
        android:layout_marginBottom="15dp"/>
    <Button
        android:id="@+id/btn_rel11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel11"
        android:layout_below="@id/btn_rel5"
        android:layout_toStartOf="@id/btn_rel5"/>
    <Button
        android:id="@+id/btn_rel12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rel12"
        android:layout_below="@id/btn_rel5"
        android:layout_toEndOf="@id/btn_rel5"/>
</RelativeLayout>