<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityConstraint">

    <Button
        android:id="@+id/btn_const1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_const1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_const2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btn_const2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_const3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_const3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_const2"
        app:layout_constraintVertical_bias="0.09"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/btn_const4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_const5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_const2"
        app:layout_constraintVertical_bias="0.09"
        app:layout_constraintWidth_percent="0.6" />


    <TextView
        android:id="@+id/text_const1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_const1"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_const2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_const2"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_const1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_const4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/editText_const"
        android:layout_width="204dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/test_get_data"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:text="@string/btn_test_get_data"
        android:textAlignment="center"
        android:textSize="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_const" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--для Textview и для последний кнопки сделала baseline к рядом стоящим view чтобы текст снизу был выравнен,
и был на одном уровне у всех -->