<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:weightSum="3"
    tools:context=".ActivityLinear">

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#000000"
        android:text="@string/text1"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:layout_gravity="fill_vertical"/>

    <TextView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ff0000"
        android:text="@string/text2"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_gravity="fill_vertical"/>

    <TextView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff000"
        android:text="@string/text3"
        android:textColor="@color/purple_500"
        android:textSize="15dp"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_gravity="fill_vertical"/>
</LinearLayout>
