<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    tools:context=".ActivityChronometer">

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity= "center"
        android:background="@color/green"
        android:baselineAligned="false"
        android:text="@string/start"
        android:textColor="@color/white"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@color/red"
        android:text="@string/stop"
        android:textColor="@color/white"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@color/fuchsia"
        android:text="@string/reset"
        android:textColor="@color/white"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_margin="20dp"/>


</LinearLayout>